// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SalesLeadsStateMachine HappyPathTest 1`] = `"{\\"StartAt\\":\\"Validation\\",\\"States\\":{\\"Validation\\":{\\"Type\\":\\"Parallel\\",\\"ResultPath\\":\\"$.results\\",\\"Next\\":\\"DetectSentiment\\",\\"Catch\\":[{\\"ErrorEquals\\":[\\"CustomValidationError\\"],\\"Next\\":\\"CustomValidationFailed\\"},{\\"ErrorEquals\\":[\\"States.ALL\\"],\\"Next\\":\\"ValidationException\\"}],\\"Branches\\":[{\\"StartAt\\":\\"Check Identity\\",\\"States\\":{\\"Check Identity\\":{\\"End\\":true,\\"Retry\\":[{\\"ErrorEquals\\":[\\"Lambda.ServiceException\\",\\"Lambda.AWSLambdaException\\",\\"Lambda.SdkClientException\\",\\"CustomValidationError\\"],\\"IntervalSeconds\\":0,\\"MaxAttempts\\":3,\\"BackoffRate\\":1}],\\"Type\\":\\"Task\\",\\"InputPath\\":\\"$.data.identity\\",\\"ResultSelector\\":{\\"indentity.$.$\\":\\"States.StringToJson('$.Payload.body')\\"},\\"Resource\\":\\"arn:aws:states:::lambda:invoke\\",\\"Parameters\\":{\\"FunctionName\\":\\"arn:aws:lambda:us-west-2:123456789012:function:check-identity-function\\",\\"Payload\\":{\\"Payload.$\\":\\"$\\",\\"FunctionName\\":\\"CheckIdentityFunction\\"}}}}},{\\"StartAt\\":\\"Check Address\\",\\"States\\":{\\"Check Address\\":{\\"End\\":true,\\"Retry\\":[{\\"ErrorEquals\\":[\\"Lambda.ServiceException\\",\\"Lambda.AWSLambdaException\\",\\"Lambda.SdkClientException\\",\\"CustomValidationError\\"],\\"IntervalSeconds\\":0,\\"MaxAttempts\\":3,\\"BackoffRate\\":1}],\\"Type\\":\\"Task\\",\\"InputPath\\":\\"$.data.address\\",\\"ResultSelector\\":{\\"address.$.$\\":\\"States.StringToJson('$.Payload.body')\\"},\\"Resource\\":\\"arn:aws:states:::lambda:invoke\\",\\"Parameters\\":{\\"FunctionName\\":\\"arn:aws:lambda:us-west-2:123456789012:function:check-address-function\\",\\"Payload\\":{\\"Payload.$\\":\\"$\\",\\"FunctionName\\":\\"CheckIdentityFunction\\"}}}}}],\\"ResultSelector\\":{\\"identityResult.$\\":\\"$[0].identity\\",\\"addressResult.$\\":\\"$[1].address\\"}},\\"DetectSentiment\\":{\\"Next\\":\\"Is Positive Sentiment?\\",\\"Type\\":\\"Task\\",\\"Resource\\":\\"arn:aws:states:::aws-sdk:comprehend:detectSentiment\\",\\"Parameters\\":{\\"LanguageCode\\":\\"en\\",\\"Text.$\\":\\"$.data.comments\\"},\\"ResultSelector\\":{\\"sentimentAnalysis.$\\":\\"$\\"},\\"ResultPath\\":\\"$.results\\",\\"Retry\\":[{\\"ErrorEquals\\":[\\"InternalServerException\\"],\\"IntervalSeconds\\":1,\\"MaxAttempts\\":3,\\"BackoffRate\\":1}]},\\"Is Positive Sentiment?\\":{\\"Type\\":\\"Choice\\",\\"Choices\\":[{\\"Variable\\":\\"$.results.sentimentAnalysis.Sentiment\\",\\"StringEquals\\":\\"POSITIVE\\",\\"Next\\":\\"Add to FollowUp\\"}],\\"Default\\":\\"NegativeSentimentDetected\\"},\\"NegativeSentimentDetected\\":{\\"End\\":true,\\"Type\\":\\"Task\\",\\"Resource\\":\\"arn:aws:states:::events:putEvents\\",\\"Parameters\\":{\\"Entries\\":[{\\"Detail\\":{\\"Message\\":\\"Negative Sentiment Detected\\",\\"Data.$\\":\\"$.data\\"},\\"DetailType\\":\\"NegativeSentiment\\",\\"Source\\":\\"LocalTestingSource\\"}]}},\\"Add to FollowUp\\":{\\"Next\\":\\"CustomerAddedToFollowup\\",\\"Type\\":\\"Task\\",\\"InputPath\\":\\"$.data\\",\\"Resource\\":\\"arn:aws:states:::dynamodb:putItem\\",\\"Parameters\\":{\\"Item\\":{\\"PK\\":{\\"S.$\\":\\"$.identity.email\\"}},\\"TableName\\":\\"FollowUpTable\\"}},\\"CustomerAddedToFollowup\\":{\\"End\\":true,\\"Type\\":\\"Task\\",\\"InputPath\\":\\"$.data\\",\\"Resource\\":\\"arn:aws:states:::events:putEvents\\",\\"Parameters\\":{\\"Entries\\":[{\\"Detail\\":{\\"Message\\":\\"Customer Added for follow up\\",\\"EmailAddress.$.$\\":\\"$.identity.email\\"},\\"DetailType\\":\\"CustomerAdded\\",\\"Source\\":\\"LocalTestingSource\\"}]}},\\"CustomValidationFailed\\":{\\"End\\":true,\\"Type\\":\\"Task\\",\\"Resource\\":\\"arn:aws:states:::events:putEvents\\",\\"Parameters\\":{\\"Entries\\":[{\\"Detail\\":{\\"Message\\":\\"Validation Failed\\"},\\"DetailType\\":\\"ValidationFailed\\",\\"Source\\":\\"LocalTestingSource\\"}]}},\\"ValidationException\\":{\\"End\\":true,\\"Type\\":\\"Task\\",\\"Resource\\":\\"arn:aws:states:::events:putEvents\\",\\"Parameters\\":{\\"Entries\\":[{\\"Detail\\":{\\"Message\\":\\"Validation Exception\\"},\\"DetailType\\":\\"ValidationException\\",\\"Source\\":\\"LocalTestingSource\\"}]}}}}"`;

exports[`SalesLeadsStateMachine HappyPathTest 2`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "roleArn": "arn:aws:iam::123456789012:role/service-role/LambdaSQSIntegration",
  },
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 1,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 0,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ExecutionStarted",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 3`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 2,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 0,
  "stateEnteredEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "name": "Validation",
  },
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ParallelStateEntered",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 4`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 3,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 2,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ParallelStateStarted",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 5`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 4,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 3,
  "stateEnteredEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "name": "Check Identity",
  },
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateEntered",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 6`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 5,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 3,
  "stateEnteredEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "name": "Check Address",
  },
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateEntered",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 7`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 6,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 5,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": Object {
    "heartbeatInSeconds": undefined,
    "parameters": "{\\"FunctionName\\":\\"arn:aws:lambda:us-west-2:123456789012:function:check-address-function\\",\\"Payload\\":{\\"FunctionName\\":\\"CheckIdentityFunction\\",\\"Payload\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"}}}",
    "region": "us-east-1",
    "resource": "invoke",
    "resourceType": "lambda",
    "timeoutInSeconds": undefined,
  },
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskScheduled",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 8`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 7,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 6,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": Object {
    "resource": "invoke",
    "resourceType": "lambda",
  },
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStarted",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 9`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 8,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 4,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": Object {
    "heartbeatInSeconds": undefined,
    "parameters": "{\\"FunctionName\\":\\"arn:aws:lambda:us-west-2:123456789012:function:check-identity-function\\",\\"Payload\\":{\\"FunctionName\\":\\"CheckIdentityFunction\\",\\"Payload\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"}}}",
    "region": "us-east-1",
    "resource": "invoke",
    "resourceType": "lambda",
    "timeoutInSeconds": undefined,
  },
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskScheduled",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 10`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 9,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 8,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": Object {
    "resource": "invoke",
    "resourceType": "lambda",
  },
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStarted",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 11`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 10,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 4,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ParallelStateFailed",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 12`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 11,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 2,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": Object {
    "name": "Validation",
    "output": "{\\"Error\\":\\"States.Runtime\\",\\"Cause\\":\\"An error occurred while executing the state 'Check Identity' (entered at the event id #4). There was an error while evaluating the intrinsic function: States.StringToJson('$.Payload.body'). com.amazonaws.asl.json.intrinsic.EvaluationException: Cannot convert String to Json in States.StringToJson, caused by: Unrecognized token '$': was expecting (JSON String, Number, Array, Object or token 'null', 'true' or 'false')\\\\n at [Source: (String)\\\\\\"$.Payload.body\\\\\\"; line: 1, column: 2]\\"}",
    "outputDetails": Object {
      "truncated": false,
    },
  },
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateExited",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 13`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 12,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 11,
  "stateEnteredEventDetails": Object {
    "input": "{\\"Error\\":\\"States.Runtime\\",\\"Cause\\":\\"An error occurred while executing the state 'Check Identity' (entered at the event id #4). There was an error while evaluating the intrinsic function: States.StringToJson('$.Payload.body'). com.amazonaws.asl.json.intrinsic.EvaluationException: Cannot convert String to Json in States.StringToJson, caused by: Unrecognized token '$': was expecting (JSON String, Number, Array, Object or token 'null', 'true' or 'false')\\\\n at [Source: (String)\\\\\\"$.Payload.body\\\\\\"; line: 1, column: 2]\\"}",
    "inputDetails": Object {
      "truncated": false,
    },
    "name": "ValidationException",
  },
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateEntered",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 14`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 13,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 12,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": Object {
    "heartbeatInSeconds": undefined,
    "parameters": "{\\"Entries\\":[{\\"Detail\\":{\\"Message\\":\\"Validation Exception\\"},\\"DetailType\\":\\"ValidationException\\",\\"Source\\":\\"LocalTestingSource\\"}]}",
    "region": "us-east-1",
    "resource": "putEvents",
    "resourceType": "events",
    "timeoutInSeconds": undefined,
  },
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskScheduled",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 15`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 14,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 13,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": Object {
    "resource": "putEvents",
    "resourceType": "events",
  },
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStarted",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 16`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 15,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 14,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": Object {
    "cause": "The security token included in the request is invalid. (Service: AmazonEventBridge; Status Code: 400; Error Code: UnrecognizedClientException; Request ID: 4c25c745-4f60-4ef9-a914-e0d8b95ddb9b; Proxy: null)",
    "error": "EVENTS.AmazonEventBridgeException",
    "resource": "putEvents",
    "resourceType": "events",
  },
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskSubmitFailed",
}
`;

exports[`SalesLeadsStateMachine HappyPathTest 17`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": Object {
    "cause": "The security token included in the request is invalid. (Service: AmazonEventBridge; Status Code: 400; Error Code: UnrecognizedClientException; Request ID: 4c25c745-4f60-4ef9-a914-e0d8b95ddb9b; Proxy: null)",
    "error": "EVENTS.AmazonEventBridgeException",
  },
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 16,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 15,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ExecutionFailed",
}
`;
